# tree-sitter-pascal

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  TODOS.md  grammar.js  pyproject.toml  tree-sitter.json
.claude/: settings.local.json
.github/workflows/: build-libs.yml  ci.yml
bindings/c/: CMakeLists.txt  Makefile
bindings/node/: binding.gyp  package-lock.json  package.json
bindings/python/: pyproject.toml  setup.py
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pascal/: __init__.pyi  _binding.pyd  binding.c
bindings/python/tree_sitter_pascal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bindings/rust/: Cargo.toml
bindings/swift/: Package.swift
docs/: Delphi-Grammar-Evolution.md  Tree-sitter-Delphi-512.avif  Tree-sitter-Delphi.avif  consolidation.md  diabolical-testing.md  diabolically-fuzzy.avif  export_rules.js  highlight-demo.html  rules.md
examples/: examples.dpr  examples.dproj  examples.dproj.local  foo.pas  modernDelphi.pas
examples/Win32/Debug/: modernDelphi.dcu
examples/__history/: anon.pas.~3~  anon.pas.~4~  anon.pas.~5~  anon.pas.~6~  examples.dpr.~1~  modernDelphi.pas.~1~  modernDelphi.pas.~2~
scripts/: build.ps1  clean.ps1  ensure-prereq.ps1
src/: grammar.json  node-types.json  parser.c
test/: diabolical-testing.md  full-ternary.js  fuzz-delphi.js  fuzz-inline.js  fuzz-logical.js  fuzz-multiline.js  fuzz-numbers.js  fuzz-preprocessor.js  fuzz-records.js  fuzz-shared-code.js  fuzz-ternary.js
test/corpus/: diabolical-inline.txt  diabolical-logical.txt  diabolical-multiline.txt  diabolical-numbers.txt  diabolical-preprocessor.txt  diabolical-records.txt  diabolical-ternary.txt  modern_delphi.txt  modern_delphi_diabolical.txt  preprocessor_nested.txt  test_nested.pas
